# simple-chat-fastapi

./: .pre-commit-config.yaml  README.md  docker-compose.yaml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  server.py
backend/migrations/: env.py
backend/migrations/versions/: d603de1ed05e_init.py
backend/src/: .env.example  app.py  config.py  dependencies.py  exceptions.py  utils.py
backend/src/core/: redis_client.py
backend/src/database/: db.py
backend/src/database/models/: message.py  user.py
backend/src/routes/: chat.py
backend/src/schemas/: config.py  message.py  user.py
backend/tests/: conftest.py  test.db  test_dependencies.py  test_limiter.py  test_utils.py
backend/tests/test_api/: test_change_password.py  test_delete_message.py  test_messages.py  test_refresh.py  test_send_message.py  test_sign_up.py  test_token.py  test_update_message.py  test_ws.py
frontend/src/: App.css  index.css
frontend/src/components/Auth/: AuthForms.jsx  AuthForms.module.css  AuthProvider.jsx  AuthenticationPage.jsx
frontend/src/components/Message/: Message.jsx  Message.module.css
frontend/src/components/User/: User.jsx  User.module.css
frontend/src/config/: api.js
frontend/src/hooks/: useApi.js  useWebSocket.js
frontend/src/layout/: Layout.jsx
frontend/src/pages/ChatPage/: ChatInput.jsx  ChatMessages.jsx  ChatPage.jsx  ChatPage.module.css  ChatSidebar.jsx
frontend/src/utils/: dateUtils.js
